# pico2w-bt-a2dp-audio-receiver-efx-g

./: ANALYSIS_INDEX.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  ARM_GCC_SETUP_GUIDE.md  BUILD_SCRIPTS_README.md  BUILD_WINDOWS.md  CMakeLists.txt  EXECUTIVE_SUMMARY.md  FILE_REFERENCE.txt  IMPLEMENTATION_SUMMARY.md  KAMMERL_COMPARISON.md  QUICKSTART_WINDOWS.md  QUICK_REFERENCE.md  README.md  TAP_TEMPO_README.md  WIRING.md  btstack_config.h  build-mingw.bat  build.bat  rebuild-mingw.bat  rebuild.bat
src/: audio_effect.c  audio_effect.h  audio_out_i2s.c  audio_out_i2s.h  audio_out_pwm.c  audio_out_pwm.h  bt_audio.c  bt_audio.h  btstack_config.h  config.h  i2s.pio  main.c  newlib_stubs.c  tap_tempo.c  tap_tempo.h
